--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@playwright/test": "^1.22.2",
+    "@playwright/test": "^1.43.1",
+    "@types/node": "^20.12.7",
     "moment": "^2.29.1"
   }
 }
